<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_1"
        android:orientation="vertical">
        <include layout="@layout/sub_actionbar" />

        <!--图文混排-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_loading_placeholder"
                style="@style/WithDrawCommonMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp10"
                android:layout_marginTop="@dimen/dp14"
                android:scaleType="centerCrop"
                android:src="@drawable/withdraw_top" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    style="@style/text_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/dp10"
                    android:text="@string/withdraw_amount" />

                <TextView
                    android:id="@+id/tv_withdraw_total_bonuspoint"
                    style="@style/text_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/withdraw_count" />
            </LinearLayout>

        </RelativeLayout>

        <!--银行卡信息-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_bg"
            android:orientation="vertical">
            <!--姓名-->
            <LinearLayout
                style="@style/WithDrawCommonMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider"
                android:orientation="vertical"
                android:showDividers="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/withdraw_user_name_title" />

                <EditText
                    android:id="@+id/et_withdraw_user_name"
                    style="@style/WithDrawEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/withdraw_user_name_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />
            </LinearLayout>
            <!--银行卡-->
            <LinearLayout
                style="@style/WithDrawCommonMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider"
                android:orientation="vertical"
                android:showDividers="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/withdraw_bank_name_title" />

                <EditText
                    android:id="@+id/et_withdraw_bank_name"
                    style="@style/WithDrawEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/withdraw_bank_name_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                style="@style/WithDrawCommonMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider"
                android:orientation="vertical"
                android:showDividers="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/withdraw_bankcard_no_title" />

                <EditText
                    android:id="@+id/et_withdraw_cardno"
                    style="@style/WithDrawEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/withdraw_bankcard_no_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1" />
            </LinearLayout>
        </LinearLayout>
        <!--说明-->
        <LinearLayout
            style="@style/WithDrawCommonMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/withdraw_introduction"
                android:textColor="@color/with_draw_introduction" />
        </LinearLayout>

        <!--按钮-->
        <TextView
            android:id="@+id/tv_withdraw_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/toolbar_background"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/withdraw_button"
            android:textColor="@color/text_white"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>

