<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_invite_share_bg"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!--title-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="88dp"
                android:text="@string/invite_share_title"
                android:textColor="@color/text_white"
                android:textSize="14sp" />

            <!--whatsapp-->
            <com.id.cash.widget.InviteShareButton
                style="@style/Clickable"
                android:id="@+id/isb_invite_share_whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:isbIcon="@drawable/ic_share_whatsapp_0"
                app:isbIconSelected="@drawable/ic_share_whatsapp_1"
                app:isbTitle="@string/invite_share_whatsapp" />

            <com.id.cash.widget.InviteShareButton
                style="@style/Clickable"
                android:id="@+id/isb_invite_share_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:isbIcon="@drawable/ic_share_fb_0"
                app:isbIconSelected="@drawable/ic_share_fb_1"
                app:isbTitle="@string/invite_share_fb" />

            <com.id.cash.widget.InviteShareButton
                style="@style/Clickable"
                android:id="@+id/isb_invite_share_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:isbIcon="@drawable/ic_share_more_0"
                app:isbIconSelected="@drawable/ic_share_more_1"
                app:isbTitle="@string/invite_share_more" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/ib_invite_share_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="40dp"
        android:src="@drawable/ic_invite_share_close" />

</RelativeLayout>
