<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_1"
    android:orientation="vertical">

    <include layout="@layout/sub_actionbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <WebView
            android:id="@+id/wv_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp14"
            android:layout_marginRight="@dimen/dp14"
            android:layout_marginTop="@dimen/dp10"
            android:background="@color/background_1" />

        <ImageView
            android:id="@+id/iv_loading_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@mipmap/text_loading_placeholder" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:gravity="center"
        android:text="@string/read_policy_fully"
        android:textColor="@color/text_highlight"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp14"
        android:orientation="horizontal">

        <com.id.cash.widget.ClickableCheckBox
            android:id="@+id/cb_agree"
            style="@style/check_box"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp40"
            android:checked="false"
            android:text="@string/i_agree_this_policy"
            android:textColor="@color/text_hint"
            android:paddingLeft="6dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_agree"
        style="@style/theme_dialog_button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp14"
        android:layout_marginRight="@dimen/dp14"
        android:text="@string/button_agree" />
</LinearLayout>
